force-app/main/default/objects/CARE_CI_CC__c/CARE_CI_CC__c.object-meta.xml
<CustomObject>
    <description>CARE CI CC data from CC&amp;B</description>
    <label>CARE CI CC</label>
    <nameField>
        <displayFormat>CICC{0000000000}</displayFormat>
        <label>Sequence No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CARE CI CC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>