force-app/main/default/objects/CARE_CI_CC__c/fields/CC_DTTM__c.field-meta.xml
<CustomField>
    <fullName>CC_DTTM__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC DTTM</label>
    <type>Date</type>
</CustomField>