force-app/main/default/objects/CARE_CI_CC__c/fields/CC_ID__c.field-meta.xml
<CustomField>
    <fullName>CC_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>CC ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>