force-app/main/default/objects/CARE_CI_CC__c/fields/CC_STATUS_FLG__c.field-meta.xml
<CustomField>
    <fullName>CC_STATUS_FLG__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>CC STATUS FLG</label>
    <length>4</length>
    <type>Text</type>
</CustomField>