force-app/main/default/objects/CARE_CI_CC__c/fields/DESCR254__c.field-meta.xml
<CustomField>
    <fullName>DESCR254__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>DESCR254</label>
    <type>TextArea</type>
</CustomField>