force-app/main/default/objects/CARE_CI_CC__c/fields/USER_ID__c.field-meta.xml
<CustomField>
    <fullName>USER_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>USER ID</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>