force-app/main/default/objects/CARE_CI_CC__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CC_ID__c</columns>
    <columns>PER_ID__c</columns>
    <columns>CC_DTTM__c</columns>
    <columns>CC_CL_CD__c</columns>
    <columns>CC_TYPE_CD__c</columns>
    <columns>DESCR254__c</columns>
    <columns>USER_ID__c</columns>
    <columns>CC_STATUS_FLG__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>